--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
+        "jquery": "^3.6.1",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.19",
+        "tailwindcss": "^3.2.4",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "chart.js": "^4.0.1",
+        "jquery-ui": "^1.13.2"
     }
 }
